--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Jaipur || Tour Company</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css"
+      integrity="sha512-c93ifPoTvMdEJH/rKIcBx//AL1znq9+4/RmMGafI/vnTFe/dKwnn1uoeszE2zJBQTS1Ck5CqSBE+34ng2PthJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- styles css -->
+    <!-- <link rel="stylesheet" href="../src/index.css" /> -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- <nav class="navbar">
+      <div class="nav-center">
+        <div class="nav-header">
+          <img src="./images/logo.svg" class="nav-logo" alt="backroads" />
+          <button type="button" class="nav-toggle" id="nav-toggle">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        //-left this comment on purpose
+        <ul class="nav-links" id="nav-links">
+          <li>
+            <a href="#home" class="nav-link"> home </a>
+          </li>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+          <li>
+            <a href="#about" class="nav-link"> about </a>
+          </li>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+          <li>
+            <a href="#services" class="nav-link"> services </a>
+          </li>
+
+          <li>
+            <a href="#tours" class="nav-link"> tours</a>
+          </li>
+        </ul>
+
+        <ul class="nav-icons">
+          <li>
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="hero" id="home">
+      <div class="hero-banner">
+        <h1>continue exploring</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+          explicabo debitis est autem dicta.
+        </p>
+        <a href="#tours" class="btn hero-btn">explore tours</a>
+      </div>
+    </section>
+
+    <section class="section" id="about">
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+
+      <div class="section-center about-center">
+        <div class="about-img">
+          <img
+            src="./images/about.jpeg"
+            class="about-photo"
+            alt="awesome beach"
+          />
+        </div>
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+            quisquam harum nam cumque temporibus explicabo dolorum sapiente odio
+            unde dolor?
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+            quisquam harum nam cumque temporibus explicabo dolorum sapiente odio
+            unde dolor?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
+
+    <section class="section services" id="services">
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <div class="section-center services-center">
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-wallet fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores, officia.
+            </p>
+          </div>
+        </article>
+
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-tree fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">endless hiking</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores, officia.
+            </p>
+          </div>
+        </article>
+
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-socks fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores, officia.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="section" id="tours">
+      <div class="section-title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+
+      <div class="section-center featured-center">
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">august 26th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>Tibet Adventure</h4>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
+              vitae tempore voluptatum maxime reprehenderit eum quod
+              exercitationem fugit, qui corporis.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i></span> china
+              </p>
+              <p>6 days</p>
+              <p>from $2100</p>
+            </div>
+          </div>
+        </article>
+
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">october 1th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>best of java</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
+              vitae tempore voluptatum maxime reprehenderit eum quod
+              exercitationem fugit, qui corporis.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i></span> indonesia
+              </p>
+              <p>11 days</p>
+              <p>from $1400</p>
+            </div>
+          </div>
+        </article>
+
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">september 15th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>explore hong kong</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
+              vitae tempore voluptatum maxime reprehenderit eum quod
+              exercitationem fugit, qui corporis.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i></span> hong kong
+              </p>
+              <p>8 days</p>
+              <p>from $5000</p>
+            </div>
+          </div>
+        </article>
+
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">december 5th, 2019</p>
+          </div>
+          <div class="tour-info">
+            <h4>kenya highlights</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
+              vitae tempore voluptatum maxime reprehenderit eum quod
+              exercitationem fugit, qui corporis.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i></span> kenya
+              </p>
+              <p>20 days</p>
+              <p>from $3300</p>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <footer class="section footer">
+      <ul class="footer-links">
+        <li>
+          <a href="#home" class="footer-link">home</a>
+        </li>
+        <li>
+          <a href="#about" class="footer-link">about</a>
+        </li>
+        <li>
+          <a href="#services" class="footer-link">services</a>
+        </li>
+        <li>
+          <a href="#featured" class="footer-link">featured</a>
+        </li>
+      </ul>
+      <ul class="footer-icons">
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon"
+            ><i class="fab fa-squarespace"></i
+          ></a>
+        </li>
+      </ul>
+      <p class="copyright">
+        copyright &copy; Backroads travel tours company
+        <span id="date"></span> all rights reserved
+      </p>
+    </footer> -->
+    <script src="../src/index.js" type="text/javascript"></script>
   </body>
 </html>
